updated song card image

--- a/s1fp/style.css
+++ b/s1fp/style.css
@@ -33,7 +33,7 @@ body {
     display: flex;
 }
 
-/* Cosmic background */
+/* background */
 .cosmic-background {
     position: absolute;
     top: 0;
